SG-2004-01-22-2: Enhancem.: updated man page for qmod
                 Changed:   man1/qmod.1

SG-2004-01-22-1: Bugfix:    Removed the renaming of users via qconf. It never
                            worked and should not have been part of qconf.
                 Changed:   qconf
                 Issue:     646

SG-2004-01-22-0: Enhancem.: 2. part of the qmod adaption
                 Changed:   qmod, qmaster

EB-2004-01-22-0: Bugfix:    CQ related bugfixes
                            - changed defaults auf CQ template
                            - changed verification of pe_list

EB-2004-01-21-2: Enhancem.: Cleanup / Comments

DT-2004-01-21-0: Bugfix:    drmaa_run_bulk_jobs() wasn't submiting the job as an
                            array job.  Also cleaned up DT-2004-01-19-0.
                 Changed:   drmaa.c, interactive_sched.c
                 Review:    AH

AD-2004-01-21-1: Bugfix:    Handling of 'SGE_DEBUG_TARGET' env var was broken
                 Changed:   rmon

AD-2004-01-21-0: Enhancem:  - 'sge_qmaster' does now handle 'SIGTERM'.
                            - overwork of signal handling.
                 Changed:   qmaster

AA-2004-01-21-0: Enhancem.  qmon cluster queue changes, NOT YET COMPLETED
                            to get the rest of qmon functionality operable
                            again (indexes for lists changed with the intro
                            of cluster queues)
                 Changed:   all, sge_attr.c, sge_object.c

JG-2004-01-21-0: Bugfix:    Categories (job requests) were truncated in the 
                            accounting and the reporting file.
                            Fixed build for solaris86.
                 Changed:   sge_qmaster
                 Review:    pending

EB-2004-01-21-1: Bugfix:    Handled TODO-Sections concernings CQs
                 Changed:   sge_schedd

EB-2004-01-21-1: Bugfix:    Handled TODO-Sections concernings CQs
                 Changed:   sge_schedd
